[project]
version = "0.0.7"
name = "muoblpsolvers"
description = "Solvers for multi objective linear programming"

authors = [
    { name = "Piotr Skowron", email = "p.skowron@mimuw.edu.pl" },
    { name = "Jan Sznajd", email = "j.sznajd@uw.edu.pl" }
]
license = "MIT"
readme = "README.md"

requires-python = ">=3.11"

dynamic = [ "dependencies" ]

[project.urls]
repository = "https://github.com/jasieksz/multiobjective-lp"
documentation = "https://jasieksz.github.io/multiobjective-lp"

[tool.poetry]
packages = [{include = "muoblpsolvers", from = "src"}]

[tool.poetry.dependencies]
muoblp = "1.0.0"

[tool.ruff]
line-length = 79

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "src/muoblpsolvers/bindings"
cmake.define = { PYTHON_EXECUTABLE = "python", CMAKE_OSX_ARCHITECTURES = "arm64}" }

[tool.cibuildwheel]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_i686"]
test-command = "python -c 'import muoblpsolvers.mes; import muoblpsolvers.mes_add1'"

[tool.cibuildwheel.macos]
repair-wheel-command = [
    "export DYLD_LIBRARY_PATH=$PWD/.openblas/lib",
    "echo DYLD_LIBRARY_PATH $DYLD_LIBRARY_PATH",
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
]
